# django-gsuite-email

./: LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
django_gsuite_email/: __init__.py  apps.py  backends.py  utils.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
