[metadata]
name = django-gsuite-email
version = 0.1
description = Send emails via a GSuite serviceaccount credential.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adithya
author_email = adithya.webdev@gmail.com
url = https://github.com/slicefox/django-gsuite-email
download_url = https://github.com/slicefox/django-gsuite-email/archive/0.1.tar.gz
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: